@@ -228,7 +228,7 @@ class TestComponentTag(SimpleTestCase):
         class MyComponent(Component):
             def render_html(self, parent_context):
                 return format_html(
-                    "<h1>{} was here</h1>", parent_context.get("first_name")
+                    "<h1>{} was here</h1>", parent_context.get("first_name", "nobody")
                 )
 
         template = Template(
@@ -236,6 +236,41 @@ class TestComponentTag(SimpleTestCase):
         )
         html = template.render(Context({"my_component": MyComponent()}))
         self.assertEqual(html, "<h1>Kilroy was here</h1>")
+
+        template = Template(
+            "{% load wagtailadmin_tags %}{% component my_component with first_name='Kilroy' %}"
+        )
+        html = template.render(Context({"my_component": MyComponent()}))
+        self.assertEqual(html, "<h1>Kilroy was here</h1>")
+
+        template = Template(
+            "{% load wagtailadmin_tags %}{% with first_name='Kilroy' %}{% component my_component with surname='Silk' only %}{% endwith %}"
+        )
+        html = template.render(Context({"my_component": MyComponent()}))
+        self.assertEqual(html, "<h1>nobody was here</h1>")
+
+    def test_fallback_render_method(self):
+        class MyComponent(Component):
+            def render_html(self, parent_context):
+                return format_html("<h1>I am a component</h1>")
+
+        class MyNonComponent:
+            def render(self):
+                return format_html("<h1>I am not a component</h1>")
+
+        template = Template("{% load wagtailadmin_tags %}{% component my_component %}")
+        html = template.render(Context({"my_component": MyComponent()}))
+        self.assertEqual(html, "<h1>I am a component</h1>")
+        with self.assertRaises(ValueError):
+            template.render(Context({"my_component": MyNonComponent()}))
+
+        template = Template(
+            "{% load wagtailadmin_tags %}{% component my_component fallback_render_method=True %}"
+        )
+        html = template.render(Context({"my_component": MyComponent()}))
+        self.assertEqual(html, "<h1>I am a component</h1>")
+        html = template.render(Context({"my_component": MyNonComponent()}))
+        self.assertEqual(html, "<h1>I am not a component</h1>")
 
     def test_component_escapes_unsafe_strings(self):
         class MyComponent(Component):
@@ -258,6 +293,17 @@ class TestComponentTag(SimpleTestCase):
         with self.assertRaises(ValueError) as cm:
             template.render(Context({"my_component": "hello"}))
         self.assertEqual(str(cm.exception), "Cannot render 'hello' as a component")
+
+    def test_render_as_var(self):
+        class MyComponent(Component):
+            def render_html(self, parent_context):
+                return format_html("<h1>I am a component</h1>")
+
+        template = Template(
+            "{% load wagtailadmin_tags %}{% component my_component as my_html %}The result was: {{ my_html }}"
+        )
+        html = template.render(Context({"my_component": MyComponent()}))
+        self.assertEqual(html, "The result was: <h1>I am a component</h1>")
 
 
 @override_settings(
